test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/cwd_nopasswd.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
expression: stdout
---
User root may run the following commands on container:
    (root) CWD=* NOPASSWD: /usr/bin/true
