test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/cwd_not_in_first_position.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
expression: stdout
---
User ferruccio may run the following commands on container:
    (root) NOPASSWD: /tmp
    (root) /usr/bin/true, CWD=* /usr/bin/false
