test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/cwd_override.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
expression: stdout
---
Matching Defaults entries for root on container:
    !fqdn, !lecture, !mailerpath

User root may run the following commands on container:
    (root) CWD=* /usr/bin/true, CWD=/home /usr/bin/false
